--- a/src/assets/css/advanced-filter.css
+++ b/src/assets/css/advanced-filter.css
@@ -2,7 +2,7 @@
     padding: 20px;
     position: absolute;
     right: 0;
-    top: 70px;
+    top: 0;
     background: #ffffff;
     border: 1px solid #cccccc;
     z-index: 10;
@@ -20,6 +20,5 @@
     margin-top: 0;
 }
 .filter-toggle {
-    margin: 20px;
     float: right;
 }
