--- a/src/assets/css/advanced-filter.css
+++ b/src/assets/css/advanced-filter.css
@@ -1,3 +1,14 @@
+#mask {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 20px;
+    opacity: 0.5;
+    background: #ffffff;
+    z-index: 100;
+}
 .filter-form {
     padding: 20px;
     position: absolute;
@@ -5,7 +16,7 @@
     top: 0;
     background: #ffffff;
     border: 1px solid #cccccc;
-    z-index: 10;
+    z-index: 101;
     display: none;
 }
 .form-control.input-half {
